--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "isbot": "^5.1.27",
+    "konva": "^9.3.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-konva": "^19.0.6",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
