--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,8 +15,14 @@ WORKDIR /app
 RUN npm run build
 
 FROM node:20-alpine
+# Add these missing pieces:
+ENV NODE_ENV=production
+ENV PORT=3000
+EXPOSE 3000
+
 COPY ./package.json package-lock.json /app/
 COPY --from=production-dependencies-env /app/node_modules /app/node_modules
 COPY --from=build-env /app/build /app/build
 WORKDIR /app
+
 CMD ["npm", "run", "start"]
